[gd_scene load_steps=2 format=3 uid="uid://bdgf2y14baina"]

[ext_resource type="Script" path="res://scripts/common/main_menu.gd" id="1_m63g7"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_m63g7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Play" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Highscores" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Highscores
"

[node name="Options" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="Credits" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Credits
"

[node name="Quit" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="Control2" type="Control" parent="."]
custom_minimum_size = Vector2(0, 90)
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VersionNumber" type="RichTextLabel" parent="Control2/MarginContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 8
bbcode_enabled = true
text = "[right]VERSION[/right]
"

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Play" to="." method="_on_button_press" binds= ["play"]]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Highscores" to="." method="_on_button_press" binds= ["highscores"]]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Options" to="." method="_on_button_press" binds= ["options"]]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Credits" to="." method="_on_button_press" binds= ["credits"]]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Quit" to="." method="_on_button_press" binds= ["quit"]]
